log
Thu Apr  7 06:54:29 UTC 2022: 
 hashmap.c | 27 +++++++++++++++------------
 1 file changed, 15 insertions(+), 12 deletions(-)
 tests:  1|5
total_score: 10/70
963b600
Thu Apr  7 15:14:11 UTC 2022: 
 tests:  1|5
total_score: 10/70
f28a5c2
Thu Apr  7 15:36:09 UTC 2022: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:8: error: too few arguments to function ‘is_equal’
     if(is_equal(map->buckets[index]->key)==1) return;
        ^~~~~~~~
hashmap.c:34:5: note: declared here
 int is_equal(void *key1, void *key2) {
     ^~~~~~~~
hashmap.c:53:48: error: expected statement before ‘]’ token
     map->buckets[index]= createPair(key,value);]
                                                ^
Compilation failed
f9dd4f9
Thu Apr  7 15:36:23 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:8: error: too few arguments to function ‘is_equal’
     if(is_equal(map->buckets[index]->key)==1) return;
        ^~~~~~~~
hashmap.c:34:5: note: declared here
 int is_equal(void *key1, void *key2) {
     ^~~~~~~~
Compilation failed
0c23c34
Thu Apr  7 15:37:15 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
2f2b49e
Thu Apr  7 16:02:02 UTC 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:61: error: array subscript is not an integer
   while(map->buckets[index2]!=NULL && (is_equal(map->buckets[index]->key,key)!=1)){
                                                             ^
hashmap.c:83:21: error: invalid operands to binary % (have ‘char * (*)(const char *, int)’ and ‘long int’)
     index=(index+1) % map->capacity;
           ~~~~~~~~~ ^ ~~~~~~~~~~~~~
hashmap.c:85:27: error: array subscript is not an integer
   if(is_equal(map->buckets[index]->key,key)==1){
                           ^
hashmap.c:86:24: error: array subscript is not an integer
     return map->buckets[index];
                        ^
Compilation failed
d1eb031
Thu Apr  7 16:02:30 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:61: error: array subscript is not an integer
   while(map->buckets[index2]!=NULL && (is_equal(map->buckets[index]->key,key)!=1)){
                                                             ^
hashmap.c:83:21: error: invalid operands to binary % (have ‘char * (*)(const char *, int)’ and ‘long int’)
     index=(index+1) % map->capacity;
           ~~~~~~~~~ ^ ~~~~~~~~~~~~~
Compilation failed
5e3609f
Thu Apr  7 16:02:44 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
27e28be
Thu Apr  7 16:03:47 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
210d162
Thu Apr  7 16:04:08 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
5e40bba
Thu Apr  7 16:04:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f927656
Thu Apr  7 16:05:04 UTC 2022: 
 tests:  0|0
657113a
Thu Apr  7 16:05:31 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
595504a
Thu Apr  7 16:07:52 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fab589f
Thu Apr  7 16:08:15 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:62: error: expected expression before ‘=’ token
   if(map->buckets[index2]==NULL || map->buckets[index2]->key)=NULL){
                                                              ^
hashmap.c:82:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(map->buckets[index2]==NULL || map->buckets[index2]->key)=NULL){
   ^~
hashmap.c:82:67: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   if(map->buckets[index2]==NULL || map->buckets[index2]->key)=NULL){
                                                                   ^
hashmap.c:82:67: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
311834d
Thu Apr  7 16:08:21 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:62: error: expected expression before ‘==’ token
   if(map->buckets[index2]==NULL || map->buckets[index2]->key)==NULL){
                                                              ^~
hashmap.c:82:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(map->buckets[index2]==NULL || map->buckets[index2]->key)==NULL){
   ^~
hashmap.c:82:68: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   if(map->buckets[index2]==NULL || map->buckets[index2]->key)==NULL){
                                                                    ^
hashmap.c:82:68: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
2c52d08
Thu Apr  7 16:08:34 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
d25ab11
